#27 added profile for eclipse hudson proxy config