@@ -155,32 +155,26 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-					<argLine>-Xmx512M -XX:MaxPermSize=256M</argLine>
-                                        <includes>
-                                                <include>**/*Test.java</include>
-                                        </includes>
 					<excludes>
 						<exclude>**/TestServer.java</exclude>
 					</excludes>
 				</configuration>
-                                <executions>
-                                        <execution>
-                                                <id>integration-tests</id>
-                                                <phase>integration-test</phase>
-                                                <goals>
-                                                        <goal>integration-test</goal>
-                                                </goals>
-                                        </execution>
+				<executions>
+					<execution>
+						<id>integration-tests</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
 					<execution>
 						<id>verify</id>
-                                                <phase>verify</phase>
+						<phase>verify</phase>
 						<goals>
 							<goal>verify</goal>
 						</goals>
 					</execution>
-                                </executions>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
